# simpletagger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
icons/: info.txt
scripts/: dump.py
src/: About.cpp  About.hpp  About.ui  CMakeLists.txt  Constants.hpp  CustomItemDataRole.hpp  CustomItemViewHelper.cpp  CustomItemViewHelper.hpp  CustomListView.cpp  CustomListView.hpp  CustomTreeView.cpp  CustomTreeView.hpp  DirectoryStats.cpp  DirectoryStats.hpp  DirectoryStatsManager.cpp  DirectoryStatsManager.hpp  FileEditor.cpp  FileEditor.hpp  FileTagger.cpp  FileTagger.hpp  FileTagsManager.cpp  FileTagsManager.hpp  IconIdentifier.cpp  IconIdentifier.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  NewProjectDialog.cpp  NewProjectDialog.hpp  NewProjectDialog.ui  Project.cpp  Project.hpp  Settings.cpp  Settings.hpp  SettingsDialog.cpp  SettingsDialog.hpp  SettingsDialog.ui  StartupDialog.cpp  StartupDialog.hpp  StartupDialog.ui  (+9 more)
src/FileBrowser/: DirectoryTreeModel.cpp  DirectoryTreeModel.hpp  DirectoryTreeProxyModel.cpp  DirectoryTreeProxyModel.hpp  DirectoryTreeView.cpp  DirectoryTreeView.hpp  FileBrowser.cpp  FileBrowser.hpp  FileBrowser.ui  ProjectDirectoryListModel.cpp  ProjectDirectoryListModel.hpp  Utility.cpp  Utility.hpp
src/ImageViewer/: GraphicsSelectionRectItem.cpp  GraphicsSelectionRectItem.hpp  ImageGraphicsView.cpp  ImageGraphicsView.hpp  ImageViewer.cpp  ImageViewer.hpp  ImageViewer.ui
src/TagLibrary/: CommentEditor.cpp  CommentEditor.hpp  CommentEditor.ui  FilterProxyModel.cpp  FilterProxyModel.hpp  Format.hpp  Library.cpp  Library.hpp  Library.ui  LibraryInfoDialog.cpp  LibraryInfoDialog.hpp  Logging.cpp  Logging.hpp  Model.cpp  Model.hpp  Node.cpp  Node.hpp  NodeCollection.cpp  NodeCollection.hpp  NodeHierarchical.cpp  NodeHierarchical.hpp  NodeInheritance.cpp  NodeInheritance.hpp  NodeLink.cpp  NodeLink.hpp  NodeLinkSubtree.cpp  NodeLinkSubtree.hpp  NodeObject.cpp  NodeObject.hpp  NodeRoot.cpp  NodeRoot.hpp  NodeSerializable.cpp  NodeSerializable.hpp  NodeShadow.cpp  NodeShadow.hpp  SelectionHelperProxyModel.cpp  SelectionHelperProxyModel.hpp  TagLibraryInfoDialog.ui  TreeView.cpp  TreeView.hpp
src/Tags/: ListView.cpp  ListView.hpp  Tags.cpp  Tags.hpp  Tags.ui  TagsAssignedListModel.cpp  TagsAssignedListModel.hpp
src/i18n/: simpletagger-cxx_de.ts  simpletagger-cxx_pl.ts
test/: CMakeLists.txt  main.cpp
